--- a/Deauville/10 Customer Service - Deauville.html
+++ b/Deauville/10 Customer Service - Deauville.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta charset="utf-8">
     <!-- Ensures that content sizes to the initial viewport size -->
@@ -8,16 +9,15 @@
     <!-- Fixes rendering issues in Apple Mail on iOS 10+ -->
     <meta name="x-apple-disable-message-reformatting" />
     <style type="text/css">
-
-    @media screen {
-        @font-face {
-            font-family: 'Montserrat';
-            font-style: normal;
-            font-weight: 300;
-            font-size: 14px;
-            src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v12/zhcz-_WihjSQC0oHJ9TCYPk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
-            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
-        }
+        @media screen {
+            @font-face {
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 300;
+                font-size: 14px;
+                src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v12/zhcz-_WihjSQC0oHJ9TCYPk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+            }
 
         }
 
@@ -211,7 +211,7 @@
 				<tbody>
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;" class="">
-						<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;display: block; padding: 10px 20px 10px 20px; text-align: center; line-height: 10px; font-size: 10px; font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-weight: 500; font-style: italic;">Having trouble viewing this email?&nbsp;<a href="{{View_Online}}" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color: #004876;">Click here to view in your browser.</a></p>
+						<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;display: block; padding: 10px 20px 10px 20px; text-align: center; line-height: 10px; font-size: 10px; font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-weight: 500; font-style: italic;">Having trouble viewing this email? <a href="{{View_Online}}" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color: #004876;">Click here to view in your browser.</a></p>
 						</td>
 					</tr>
 					<!-- HERO HEADER BEGIN -->
@@ -220,62 +220,39 @@
 					</tr>
 					<!-- HERO HEADER END -->
 					<tr class="body" style="background-color: #fff;">
-						<td class="body" pardot-data="line-height:normal;" style="padding: 10%; border: 1px solid lightgray; line-height: normal;">
-						<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: left;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 16px; mso-height-rule: exactly; line-height:1.6; color: #252525;">{{#if Recipient.FirstName}}<br>
-						Hi there,&nbsp;{{Recipient.FirstName}}!<br>
-						{{else}}<i>&nbsp;</i><br>
-						Hi there,<br>
-						{{/if}}<i>&nbsp;</i></p>
+						<td class="body" pardot-data="line-height:1.6;" style="padding: 10%; border: 1px solid lightgray; line-height: 1.6;">
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">{{#if Recipient.FirstName}}<br>
+						{{Recipient.FirstName}}, imagine...<br>
+						{{else}}<i> </i><br>
+						Imagine...<br>
+						{{/if}}<i> </i></p>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">When people think about investing in a home, they usually only think about the monetary investment.</p>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">You’ve moved into your brand new home. You’ve unpacked all your boxes, arranged your furniture and decor, and maybe even had your first home-cooked meal.</p>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">But investing in a home also means investing your time.</p>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">But then as you finish washing your dishes, you notice a leak in your faucet.</p>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">In other words, take the time to explore your options. We want you to visit other builders&nbsp;and tour their model homes because we’re confident that you’ll realize the Granville Advantage.</p>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Or maybe your garbage disposal is making a weird sound.</p>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Here are some tips to help you in your process.</p>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Or you have no idea where the soap goes in your fancy new dishwasher.</p>
 
-						<h1>Ask to see a completed home.</h1>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Whatever the case may be, our Customer Care team is ready to swoop in and help!</p>
 
-						<ul style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">
-							<li>Inventory homes are completed homes that aren't models - they are a great way to get a better look at what’s included in the list price.</li>
-						</ul>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">As a Granville homeowner, you have 24/7 access to our talented Customer Care team, known for going above and beyond the call of duty for every one of our homeowners.</p>
 
-						<h1>Ask potential neighbors.</h1>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">From personalized frame tours during the construction of your new home, to a room-by-room tour of your completed home, and plenty of follow-up visits after you move in, our Customer Care team is here to support you throughout the entire process.</p>
 
-						<ul style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">
-							<li>When you drive around the neighborhood, you’ll often find someone working in their yard. So, just ask them, “How has your experience been?” Good or bad - they’ll be eager to share!</li>
-						</ul>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Our Customer Care team is one of the reasons why we’ve been voted Best New Home Builder for more than 12 years in a row.</p>
 
-						<h1>Drive through older neighborhoods.</h1>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">It’s also one of the reasons why people choose Granville over other builders.</p>
 
-						<ul style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">
-							<li>Want to see how your neighborhood might look in ten years and how your home will hold its value? Drive through the older neighborhoods of any builders that you are considering. Have they aged like wine or milk?</li>
-						</ul>
+						<blockquote>“Main reason why I purchased Granville homes was because of the customer service. With any question we had, we didn’t have to run around. They get directly to the point.” — Hugo Montano</blockquote>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">I hope this helps with your search for a new home!</p>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">If you want to learn more about all the services offered by our Customer Care team, <a data-mce-href="https://www.gvhomes.com/customer-care/" href="https://www.gvhomes.com/customer-care/">visit our Customer Care</a> page and see all the ways they will be there for you!</p>
 
-						<p style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">If you’re curious about more ways to shop smarter, just reach out to our sales office.</p>
-						<!-- Button : Begin -->
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">Hope to hear from you soon.</p>
 
-						<table align="center " border="0 " cellpadding="0 " cellspacing="0 " style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; table-layout: fixed !important; mso-table-lspace: 0pt !important; mso-table-rspace: 0pt !important; border-spacing: 0     !important; border-collapse: collapse !important; margin: auto;">
-							<tbody>
-								<tr>
-									<td style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; mso-table-lspace: 0pt !important; mso-table-rspace: 0pt !important; line-height: 1em;" class="">&nbsp;</td>
-								</tr>
-								<tr>
-									<td class="body_copy " style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; mso-table-lspace: 0pt !important; mso-table-rspace: 0pt !important; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 14px; line-height: 20px !important; color: #7f7f7f;">
-									<table align="center " bgcolor="#174a7c " border="0 " cellpadding="0 " cellspacing="0 " height="44 " style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; table-layout: fixed !important; mso-table-lspace: 0pt     !important; mso-table-rspace: 0pt !important; border-spacing: 0 !important; border-collapse: collapse !important; margin: 0 auto !important; border-radius: 4px; text-align: center;" width="225 ">
-										<tbody>
-											<tr>
-												<td align="center " height="44 " style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; mso-table-lspace: 0pt !important; mso-table-rspace: 0pt !important; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 14px; padding: 5px; text-align: center;" valign="middle " class=""><a href="https://www.gvhomes.com/contact/" style="color: #ffffff; text-decoration: none; -ms-text-size-adjust: 100%; -webkfit-text-size-adjust: 100%; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; display: inline-block; line-height: 44px; width: 200x; text-align: center;" target="_blank ">CONTACT SALES</a></td>
-											</tr>
-										</tbody>
-									</table>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+						<p data-mce-style="font-weight: 400; font-size: 16px; line-height: 24px; text-align: left;">All our best,<br>
+						The Granville Team</p>
 						<!-- Button : END --></td>
 					</tr>
 					<tr class="header" style="background-color: #051F59;">
@@ -292,14 +269,13 @@
                              font-size: 11px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-style: italic; color: #242424; "><br>
 									Granville Homes, 1396 W. Herndon Ave, Ste. #101, Fresno, CA 93711, United States</p>
 
-									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;font-size: 12px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; color: #242424; padding:10px;"><strong style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">559.445.9000&nbsp; | &nbsp;888.445.9770&nbsp; | &nbsp;<a href="http://www.gvhomes.com " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color: #242424; ">GVHomes.com</a></strong></p>
+									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;font-size: 12px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; color: #242424; padding:10px;"><strong style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">559.445.9000 | 888.445.9770 | <a href="http://www.gvhomes.com " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color: #242424; ">GVHomes.com</a></strong></p>
 
 									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;font-size: 12px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; color: #242424; padding:10px;">RE License # 01258537<br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
-									Contractor License # 586845<br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
-									&nbsp;</p>
+									Contractor License # 586845</p>
 									</td>
 									<td style="text-align: center;" class="">
-									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;"><a href="http://facebook.com/granvillehomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img alt="facebook_favicon" height="25px" src="https://storage.pardot.com/857603/15388/fb_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a>&nbsp; <a href="https://www.linkedin.com/company/granville-homes---new-homes-fresno" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img alt="linkedin_favicon " height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hh/857603/14876/linkedin_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a>&nbsp; <a href="https://www.youtube.com/user/GranvilleHomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hk/857603/14882/youtube_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a>&nbsp; <a href="https://twitter.com/gvhomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hf/857603/14880/twitter_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a>&nbsp; <a href="https://www.pinterest.com/granvillehomes/" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6j1/857603/14896/pinterest_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; margin: 0px; display: inline;" width="25px"></a>&nbsp; <a href="https://www.instagram.com/granvillehomes/" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6h9/857603/14874/ig_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a></p>
+									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;"><a href="http://facebook.com/granvillehomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img alt="facebook_favicon" height="25px" src="https://storage.pardot.com/857603/15388/fb_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a> <a href="https://www.linkedin.com/company/granville-homes---new-homes-fresno" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img alt="linkedin_favicon " height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hh/857603/14876/linkedin_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a> <a href="https://www.youtube.com/user/GranvilleHomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hk/857603/14882/youtube_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a> <a href="https://twitter.com/gvhomes" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6hf/857603/14880/twitter_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a> <a href="https://www.pinterest.com/granvillehomes/" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6j1/857603/14896/pinterest_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; margin: 0px; display: inline;" width="25px"></a> <a href="https://www.instagram.com/granvillehomes/" style="color:#2886CD;text-decoration:none;font-weight:bold;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><img height="25px" src="http://go.pardot.com/l/857603/2020-05-07/b6h9/857603/14874/ig_icon.png" style="outline:none;text-decoration:none;border-radius:2px;border:none;font-family:'Nunito Sans', 'Roboto', Arial, sans-serif !important;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="25px"></a></p>
 
 									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin:0;margin-bottom:10px;text-align: center; font-size: 11px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-weight: 500;
                 font-style: italic; color: #000000; ">Don't want to receive these emails anymore? <a href="{{Unsubscribe}}" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color: #004876; ">Unsubscribe from our list.</a></p>
@@ -317,4 +293,5 @@
 </table>
 <!-- END FOOTER --><!-- END CONTENT --><!-- End Centered Fixed-Width Table --><!-- End Main Content -->
 </body>
+
 </html>
